<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Target Heart Rate Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="age">Age</string>
    <string name="maxHR">Max HR</string>
    <string name="targetHR">Target HR</string>
    <string name="highTargetHR">High</string>
    <string name="lowTargetHR">Low</string>

</resources>
