<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="com.example.targetheartratecalculator.MainActivity" >

    <TextView
        android:id="@+id/ageTextView"
        android:layout_gravity="right"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:inputType="number"
        android:maxLength="3" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ageDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:background="@android:color/holo_blue_light"
        android:labelFor="@+id/ageEditText"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/maxHRTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/maxHR"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/maxHRDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@android:color/holo_blue_light"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/rangeLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/targetHighHRTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:text="@string/lowTargetHR"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/targetLowHRTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:text="@string/highTargetHR"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/targetHRTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="3"
        android:text="@string/targetHR"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/targetLinearLayout"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:id="@+id/lowHRDisplayTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/highHRDisplayTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    <Space />

</GridLayout>
